--- a/food-finderz/src/index.css
+++ b/food-finderz/src/index.css
@@ -12,9 +12,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 5% 20%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h4{
+  font-size: 1.5rem;
+  color: rgb(95, 95, 95);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+h3{
+  font-size: 1.5rem;
+  color: rgb(95, 95, 95);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a{
+  color: rgb(95, 95, 95);
 }
