--- a/food-finderz/src/index.css
+++ b/food-finderz/src/index.css
@@ -22,18 +22,18 @@ code {
 
 h4{
   font-size: 1.5rem;
-  color: rgb(95, 95, 95);
+  color: blue;
   line-height: 2.5rem;
   margin: 2rem 0rem;
 }
 
 h3{
   font-size: 1.5rem;
-  color: rgb(95, 95, 95);
+  color: blue;
   line-height: 2.5rem;
   margin: 2rem 0rem;
 }
 
 a{
-  color: rgb(95, 95, 95);
+  color: blue;
 }
